# Mogui

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/mogui/: action_handler.hpp  color.hpp  drawable_container.hpp  element.hpp  element_selector.hpp  event.hpp  event_propagator.hpp  opengl_es_renderer.hpp  rectangle.hpp  rectangle.inl  renderer.hpp  vector2.hpp  vector2.inl
lib/src/mogui/: action_handler.cpp  color.cpp  drawable_container.cpp  element.cpp  element_selector.cpp  event.cpp  event_propagator.cpp  opengl_es_renderer.cpp
test/: CMakeLists.txt
test/src/: action_handler.cpp  color.cpp  drawable_container.cpp  element.cpp  element_selector.cpp  event.cpp  event_propagator.cpp  opengl_es_renderer.cpp  rectangle.cpp  vector2.cpp
